@@ -43,8 +43,8 @@ namespace os
 	};
 
 
-	// mixed linear congruential generator (MLCG)
-	// numbers chosen according to L'Ecuyer, Commun. ACM 31 (1988) 742
+	// congruential pseudo-random generator
+	// numbers identical to std::minstd_rand0
 	// period is somewhere around m-1
 	class Randomizer
 	{
@@ -59,17 +59,18 @@ namespace os
 		//! generates a pseudo random number in the range 0..1
 		static f32 frand();
 
-		//! get maxmimum number generated by rand()
+		//! get maximum number generated by rand()
 		static s32 randMax();
 
 	private:
 
 		static s32 seed;
-		static const s32 m = 2147483399;	// a non-Mersenne prime
-		static const s32 a = 40692;			// another spectral success story
+
+		static const s32 m = 2147483647;	// a Mersenne prime (2^31-1)
+		static const s32 a = 16807;			// another spectral success story
 		static const s32 q = m/a;
 		static const s32 r = m%a;			// again less than q
-		static const s32 rMax = m-1;
+		static const s32 rMax = m-2;
 	};
 
 
